[workspace]
resolver = "2"
members = [
    "util",
]
default-members = [
    ".",
    "util",
]

[workspace.package]
version = "0.3.3"
edition = "2021"
authors = ["kyren <catherine@kyju.org>"]
license = "MIT"
repository = "https://github.com/kyren/piccolo"

[workspace.dependencies]
ahash = { version = "0.8", default-features = false }
allocator-api2 = { version = "0.2", default-features = false, features = ["alloc"] }
anyhow = { version = "1.0.87", default-features = false }
gc-arena = { git = "https://github.com/kyren/gc-arena", rev = "4d526347a9b625c29e16f7165fd998615e51c52a", default-features = false, features = ["allocator-api2", "hashbrown"] }
hashbrown = { version = "0.14", features = ["raw"] }
rand = { version = "0.8", default-features = false, features = ["small_rng"] }
serde = { version = "1.0", default-features = false, features = ["alloc"] }
thiserror = { version = "2.0", default-features = false }

piccolo = { path = "./", version = "0.3.3", default-features = false }

[package]
name = "piccolo"
description = "Stackless Lua VM implemented in pure Rust"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ahash.workspace = true
allocator-api2.workspace = true
anyhow.workspace = true
gc-arena.workspace = true
hashbrown.workspace = true
thiserror.workspace = true

rand = { workspace = true, optional = true }

[dev-dependencies]
clap = { version = "4.5", features = ["cargo"] }
rustyline = "14.0"

[features]
default = ["std", "rng"]
rng = ["dep:rand", "ahash/runtime-rng"]
std = ["rand?/std"]
